vbnc/vbnc/tests/Errors/30201-1.vb
Class A
    dim i as string =
End Class